--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{ 
+{
   "homepage": "https://n15git.github.io/Myportfolio",
   "name": "portfolio",
   "version": "0.1.0",
@@ -29,7 +29,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build" 
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
